--- a/sass/site/header/_header-main.scss
+++ b/sass/site/header/_header-main.scss
@@ -373,7 +373,7 @@ li.ast-masthead-custom-menu-items {
 			display: none;
 		}
 		.ast-mobile-header-logo{
-			display: block;
+			display: inline-block;
 		}
 	}
 
